third_party/move/move-compiler-v2/tests/checking/visibility-checker/direct_visibility_err.move
module 0x815::b {
    friend fun f() {}
}

module 0x815::c {
    public fun f() {
        0x815::b::f();
    }
}
